# userlens

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.claude/skills/userexplorer/: SKILL.md
.claude/skills/userlens/: SKILL.md
.cursor/rules/: userexplorer.mdc  userlens.mdc
.github/workflows/: ci.yml  release.yml
docs/: agent-usage.md  architecture.md  input-contract.md
docs/recipes/: from-amplitude.md  from-postgres.md  from-segment.md
examples/: README.md  claude_product_analytics.csv  synthetic_saas.csv
src/user_explorer/: __init__.py  __main__.py  cli.py  insights.py  mcp_server.py  pipeline.py  server.py
src/user_explorer/derive/: __init__.py  attributes.py  families.py  sessions.py
src/user_explorer/io/: __init__.py  reader.py
src/user_explorer/schema/: __init__.py  aliases.py  sniff.py
src/user_explorer/transform/: __init__.py  build.py
src/user_explorer/viewer/: __init__.py  render.py  template.html
src/userlens/: __init__.py  __main__.py  cli.py  insights.py  mcp_server.py  pipeline.py  server.py
src/userlens/derive/: __init__.py  attributes.py  properties.py  sessions.py
src/userlens/io/: __init__.py  reader.py
src/userlens/schema/: __init__.py  sniff.py  types.py
src/userlens/transform/: __init__.py  build.py
src/userlens/viewer/: __init__.py  render.py  template.html
tests/: test_cli.py  test_families.py  test_insights.py  test_mcp.py  test_pipeline_e2e.py  test_render.py  test_sessions.py  test_sniff.py
tests/fixtures/: aliased.csv  messy.csv  tiny.csv  tiny_snapshot.json  with_attrs.csv
