[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "user-explorer"
dynamic = ["version"]
description = "Investigate any user in 30 seconds. Drop a CSV of events, get an interactive HTML."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "user-explorer contributors" }]
keywords = ["product-analytics", "user-behavior", "event-analysis", "single-user", "html-report"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "polars>=1.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]
mcp = ["mcp>=1.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pyarrow>=14.0",
  "mcp>=1.0",
]

[project.scripts]
user-explorer = "user_explorer.cli:main"

[project.urls]
Homepage = "https://github.com/serhiitolstoi/userlens"
Repository = "https://github.com/serhiitolstoi/userlens"
Issues = "https://github.com/serhiitolstoi/userlens/issues"

[tool.hatch.version]
path = "src/user_explorer/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/user_explorer"]

[tool.hatch.build.targets.wheel.force-include]
"src/user_explorer/viewer/template.html" = "user_explorer/viewer/template.html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "E501", "PLC0415"]
"src/user_explorer/derive/families.py" = ["PLR0912"]
"src/user_explorer/cli.py" = ["PLR0911"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/user_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
